--- a/web/themes/custom/barrierefrei/barrierefrei.libraries.yml
+++ b/web/themes/custom/barrierefrei/barrierefrei.libraries.yml
@@ -9,4 +9,5 @@ global-styling:
     - core/drupal
     - core/drupalSettings
     - core/jquery
+    - core/jquery.once
     - core/jquery.ui.accordion
